--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.6.0",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.13.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
